(fix) profile text overflow and ionicon size

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -23,6 +23,12 @@ div .profile-content {
   color:#ffffff;
 }
 
+#listIcons{
+  font-size: 24px; 
+  font-weight: bold;
+  color:#000000;
+}
+
 
 .swipe-page {
 
